# cli-agent

./: .env.example  .gitignore  LICENSE  README.md  agent.py  chat_interface.py  config.example.toml  core_agent.py  input_handler.py  main.py  pyproject.toml  shell_interface.py  test_completion.py  test_libedit.py  utils.py
agent/: __init__.py  agent.py  config.py  core_agent.py  history.py  llm_client.py  loop.py  tools.py  ui.py  utils.py
bash/: plugin.bash
input_handler/: __init__.py  input_handler.py
interface/: __init__.py  chat_interface.py  shell_interface.py
providers/: __init__.py  _shared.py  functions.py  gemini.py  lmstudio.py  openai.py
tests/: test_config.py  test_history.py  test_loop.py  test_main.py  test_tools_config.py  test_utils.py  test_windows_compatibility.py
zsh/: plugin.zsh
